// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Welcome|Sample Hello World 1`] = `
<div>
  <h1
    data-testid="label"
  >
    Hello 
    World
  </h1>
  <button
    data-testid="button"
    onClick={[Function]}
  >
    Click Me
  </button>
</div>
`;

exports[`Storyshots Welcome|Sample Second Way 1`] = `
<div>
  <h1
    data-testid="label"
  >
    Hello 
    Second
  </h1>
  <button
    data-testid="button"
    onClick={[Function]}
  >
    Click Me
  </button>
</div>
`;

exports[`Storyshots Welcome|SampleV2 Sample With Sub Component 1`] = `
<div>
  <h1
    data-testid="hello"
  >
    Hello 
    World
  </h1>
  <h2
    data-testid="counter"
  >
    Click Counter = 
    0
  </h2>
  <button
    data-testid="button_add"
    onClick={[Function]}
  >
    Add 1
  </button>
  <button
    data-testid="button_minus"
    onClick={[Function]}
  >
    Minus 1
  </button>
</div>
`;
